--- a/success.html
+++ b/success.html
@@ -25,6 +25,8 @@
     <h1>✅ Payment Successful</h1>
     <p>Thank you for upgrading to CleanTrail!</p>
     <p>You can now enter your license key inside the extension to activate Pro/Pro+ features.</p>
+    <p>Your license key can be found in the email you entered</p>
   </div>
 </body>
 </html>
+
